Assets/css/todos.css
:root {
  --color_dark: #6C5CE7;
  --color_light: #A29BFE;
}

body {
  font-family: 'Work Sans', sans-serif;
  background-color: white;
}

h1 {
  color: white;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

input:focus {
  outline: none;
}

.delete {
  display: inline-flex;
  opacity: 0%;
}

.taskContainer:hover .delete {
  opacity: 100%;
  transition: opacity .25s;
}

.task {
    display: inline-flex;
    margin-left: 20px;
    text-decoration: inherit;
}

.task--completed {
  text-decoration: line-through;
  opacity: 60%;
}

.taskContainer {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: baseline;
  border: 3px solid var(--color_dark);
  border-radius: 10px;
  padding: 10px;
  font-size: 1em;
  color: white;
  background-color: var(--color_light);
}

#todoContainer {
  background-color: var(--color_dark);
  display: flex;
  flex-direction: column;
  width: 70%;
  margin: 20px auto;
  border: 2px solid var(--color_dark);
  padding: 10px;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  border-radius: 10px;
}

#newTaskInput {
  font-weight: 600;
}

@media all and (max-width: 800px) {
  #todoContainer {
    width: 90%;
}

